--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -5,13 +5,18 @@ phases:
     runtime-versions:
       nodejs: latest
 
-    commands:
-      # install yarn
-      - npm install yarn
-      # install dependencies
-      - yarn
-      # so that build commands work
-      - yarn add eslint-config-react-app
+    pre_build:
+      commands:
+        # install yarn
+        - npm install yarn
+        # install dependencies
+        - yarn
+        # so that build commands work
+        - yarn add eslint-config-react-app
+        # install amplify
+        - npm install -g @aws-amplify/cli
+        - amplify init --yes 
+        - amplify push --yes
 
   build:
     commands:
