--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -16,7 +16,11 @@ phases:
       - npm install -g @aws-amplify/cli
   pre_build:
     commands:
-      - amplify init --yes
+      - amplify init --categories "{\
+        \"userPoolId\": \"ap-southeast-1_ClqyVYv6m\",\
+        \"webClientId\": \"4rt2l9rmqe24vb79pupblc30o0\",\
+        \"identityPoolId\": \"ap-southeast-1:507b214d-b57c-455b-b627-fe2bddee56f3\"\
+        }"
   build:
     commands:
       # run build script
