--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -16,10 +16,7 @@ phases:
       - npm install -g @aws-amplify/cli
   pre_build:
     commands:
-      - amplify init --categories "{\
-          \"userPoolId\": \"ap-southeast-1_ClqyVYv6m\",\
-          \"webClientId\": \"4rt2l9rmqe24vb79pupblc30o0\",\
-          \"identityPoolId\": \"ap-southeast-1:507b214d-b57c-455b-b627-fe2bddee56f3\"\}"
+      - ./amplify.sh
   build:
     commands:
       # run build script
