--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -14,6 +14,16 @@ phases:
       - yarn add eslint-config-react-app
       # install amplify
       - npm install -g @aws-amplify/cli
+  pre_build:
+    commands:
+      - ls
+      - curl -qL -o aws_credentials.json http://169.254.170.2/$AWS_CONTAINER_CREDENTIALS_RELATIVE_URI > aws_credentials.json
+      - aws configure set region $AWS_REGION
+      - aws configure set aws_access_key_id `./jq -r '.AccessKeyId' aws_credentials.json`
+      - aws configure set aws_secret_access_key `./jq -r '.SecretAccessKey' aws_credentials.json`
+      - aws configure set aws_session_token `./jq -r '.Token' aws_credentials.json`
+      - chmod +x amplify_init.sh
+      - ./amplify_init.sh
   build:
     commands:
       # run build script
