--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -18,11 +18,17 @@ phases:
   pre_build:
     commands:
       - ls
-      - curl -qL -o aws_credentials.json http://169.254.170.2/$AWS_CONTAINER_CREDENTIALS_RELATIVE_URI > aws_credentials.json
-      - aws configure set region $AWS_REGION
-      - aws configure set aws_access_key_id `./jq -r '.AccessKeyId' aws_credentials.json`
-      - aws configure set aws_secret_access_key `./jq -r '.SecretAccessKey' aws_credentials.json`
-      - aws configure set aws_session_token `./jq -r '.Token' aws_credentials.json`
+      #- curl -qL -o aws_credentials.json http://169.254.170.2/$AWS_CONTAINER_CREDENTIALS_RELATIVE_URI > aws_credentials.json
+      #- aws configure set region $AWS_REGION
+      #- aws configure set aws_access_key_id `./jq -r '.AccessKeyId' aws_credentials.json`
+      #- aws configure set aws_secret_access_key `./jq -r '.SecretAccessKey' aws_credentials.json`
+      #- aws configure set aws_session_token `./jq -r '.Token' aws_credentials.json`
+      - curl "https://s3.amazonaws.com/aws-cli/awscli-bundle.zip" -o "awscli-bundle.zip"
+      - unzip awscli-bundle.zip
+      - ./awscli-bundle/install -i /usr/local/aws -b /usr/local/bin/aws
+      - aws configure set aws_access_key_id $AWS_ACCESS_KEY_ID
+      - aws configure set aws_secret_access_key $AWS_SECRET_ACCESS_KEY
+      - aws configure set default.region $AWS_REGION
       - chmod +x amplify_init.sh
       - ./amplify_init.sh
   build:
