--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -6,6 +6,9 @@ phases:
       nodejs: latest
 
     commands:
+      - curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
+      - unzip awscliv2.zip
+      - sudo ./aws/install
       # install yarn
       - npm install yarn
       # install dependencies
