--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -8,12 +8,5 @@
       "customAuth": false
     }
   },
-  "storage": {
-    "fcjserverlessdms3cd3babb": {
-      "service": "S3",
-      "serviceType": "imported",
-      "providerPlugin": "awscloudformation",
-      "dependsOn": []
-    }
-  }
+  "storage": {}
 }
